--- a/transcoord.html
+++ b/transcoord.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>수요조사 결과</title>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="/FileSaver.min.js"></script>
     <script type="text/javascript">
 
