--- a/transcoord.html
+++ b/transcoord.html
@@ -22,7 +22,8 @@
             y: arr[4],
             fromCoord: "TM",
             toCoord: "WGS84",
-            output: "json"
+            output: "json",
+            dataType: "jsonp"
           }
 
           var api = "https://apis.daum.net/local/geo/transcoord?";
