--- a/transcoord.html
+++ b/transcoord.html
@@ -21,7 +21,7 @@
             apikey :"fe61c4a1956aac0b7b86a8d1e648409d2db9abb0",
             x: arr[3],
             y: arr[4],
-            fromCoord: "CONGNAMUL",
+            fromCoord: "TM",
             toCoord: "WGS84",
             output: "json"
           }
