--- a/transcoord.html
+++ b/transcoord.html
@@ -28,11 +28,12 @@
           var api = "https://apis.daum.net/local/geo/transcoord?";
           var url = api + $.param(obj) + "&callback=?";
           $.getJSON(url, function(data) {
+            console.log(data);
             $("progress").attr("value", resultContent.length);
             arr[3] = data.y;
             arr[4] = data.x;
             resultContent += arr + "\n";
-            if(resultContent.length == lines.length){
+            if(resultContent.length == 100){
               var BOM = "\uFEFF";
               var    csvData = BOM + resultContent;
               var blob = new Blob([csvData], { type: "text/csv;charset=utf-8" });
