--- a/transcoord.html
+++ b/transcoord.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>수요조사 결과</title>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="/FileSaver.min.js"></script>
+    <script src="https://joohyuck.github.io/FileSaver.min.js"></script>
     <script type="text/javascript">
 
-      $.get("/file/seoul_route_station.csv",function(data){
+      $.get("https://joohyuck.github.io/file/seoul_route_station.csv",function(data){
         var lines = data.split("\n");
         $("progress").attr("max", lines.length);
 
@@ -28,14 +28,13 @@
 
           var api = "https://apis.daum.net/local/geo/transcoord?";
           var url = api + $.param(obj) + "&callback=?";
-          console.log(url);
           $.getJSON(url, function(data) {
             console.log(data);
             $("progress").attr("value", resultContent.length);
             arr[3] = data.y;
             arr[4] = data.x;
             resultContent += arr + "\n";
-            if(resultContent.length == 100){
+            if(resultContent.length == 6){
               var BOM = "\uFEFF";
               var    csvData = BOM + resultContent;
               var blob = new Blob([csvData], { type: "text/csv;charset=utf-8" });
