--- a/transcoord.html
+++ b/transcoord.html
@@ -6,6 +6,7 @@
     <title>수요조사 결과</title>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://joohyuck.github.io/FileSaver.min.js"></script>
+    <script src="https://apis.daum.net/maps/maps3.js?apikey=5de31307175306038b2cd698cec96253adf6ef60&libraries=services"></script>
     <script type="text/javascript">
 
       $.get("https://joohyuck.github.io/file/seoul_route_station.csv",function(data){
@@ -14,35 +15,45 @@
 
         var resultContent = [];
         lines.forEach(function(element, index){
-          if(index>10) return;
+          if(index>40) return;
           var arr = element.split(",");
+          var geocoder = new daum.maps.services.Geocoder(), // 좌표계 변환 객체를 생성합니다
+              wtmX = arr[3], // 변환할 WTM X 좌표 입니다
+              wtmY = arr[4]; // 변환할 WTM Y 좌표 입니다
 
-          var obj = {
-            apikey :"fe61c4a1956aac0b7b86a8d1e648409d2db9abb0",
-            x: arr[3],
-            y: arr[4],
-            fromCoord: "WTM",
-            toCoord: "WGS84",
-            output: "json"
-          }
-
-          var api = "https://apis.daum.net/local/geo/transcoord?";
-          var url = api + $.param(obj) + "&callback=?";
-          $.getJSON(url, function(data) {
-            console.log(data);
-            $("progress").attr("value", resultContent.length);
-            arr[3] = data.y;
-            arr[4] = data.x;
-            resultContent += arr + "\n";
-            if(resultContent.length == 6){
-              var BOM = "\uFEFF";
-              var    csvData = BOM + resultContent;
-              var blob = new Blob([csvData], { type: "text/csv;charset=utf-8" });
-              saveAs(blob, "transcoord.csv");
-            }
-          });
+          // WTM 좌표를 WGS84 좌표계의 좌표로 변환합니다
+          geocoder.transCoord(wtmX, 
+                              wtmY, 
+                              daum.maps.services.Coords.WTM, // 변환을 위해 입력한 좌표계 입니다
+                              daum.maps.services.Coords.WGS84, // 변환 결과로 받을 좌표계 입니다 
+                              transCoordCB); // 변환 결과를 받을 콜백합수 입니다
+          // 좌표 변환 결과를 받아서 처리할 콜백함수 입니다.
+          /*
+                    var api = "https://apis.daum.net/local/geo/transcoord?";
+                    var url = api + $.param(obj) + "&callback=?";
+                    $.getJSON(url, function(data) {
+                      console.log(data);
+                      $("progress").attr("value", resultContent.length);
+                      arr[3] = data.y;
+                      arr[4] = data.x;
+                      resultContent += arr + "\n";
+                    });
+*/
         });
-      }); 
+      });
+
+      function transCoordCB(status, result) {
+          if (status === daum.maps.services.Status.OK) {
+            console.log(result.y, result.x);
+            resultContent.push(result.y, result.x);
+          }
+          if(resultContent.length == 6){
+            var BOM = "\uFEFF";
+            var    csvData = BOM + resultContent;
+            var blob = new Blob([csvData], { type: "text/csv;charset=utf-8" });
+            saveAs(blob, "transcoord.csv");
+          }
+      }
 
     </script>
   </head>
