--- a/transcoord.html
+++ b/transcoord.html
@@ -9,6 +9,16 @@
     <script src="//apis.daum.net/maps/maps3.js?apikey=5de31307175306038b2cd698cec96253adf6ef60&libraries=services"></script>
     <script type="text/javascript">
 
+var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+var options = { //지도를 생성할 때 필요한 기본 옵션
+  center: new daum.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
+  level: 3 //지도의 레벨(확대, 축소 정도)
+};
+
+var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴
+
+
+
       $.get("/file/seoul_route_station.csv",function(data){
         var lines = data.split("\n");
         $("progress").attr("max", lines.length);
@@ -58,6 +68,7 @@
     </script>
   </head>
   <body>
+  <div id="map" style="width:500px;height:400px;"></div>
     <progress value="0" max="0"></progress>
   </body>
 </html>
