--- a/transcoord.html
+++ b/transcoord.html
@@ -20,11 +20,11 @@
       };
       var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴
 
+      var resultContent = [];
       $.get("/file/seoul_route_station.csv",function(data){
         var lines = data.split("\n");
         $("progress").attr("max", lines.length);
 
-        var resultContent = [];
         lines.forEach(function(element, index){
           if(index>40) return;
           var arr = element.split(",");
@@ -37,7 +37,14 @@
                               wtmY, 
                               daum.maps.services.Coords.WTM, // 변환을 위해 입력한 좌표계 입니다
                               daum.maps.services.Coords.WGS84, // 변환 결과로 받을 좌표계 입니다 
-                              transCoordCB); // 변환 결과를 받을 콜백합수 입니다
+                              transCoordCB(function(result){
+                                arr[3] = result.y;
+                                arr[4] = result.x;
+                                resultContent.push(arr);
+                                console.log(resultContent);
+                              })
+                              ); // 변환 결과를 받을 콜백합수 입니다
+
           // 좌표 변환 결과를 받아서 처리할 콜백함수 입니다.
           /*
                     var api = "https://apis.daum.net/local/geo/transcoord?";
@@ -53,10 +60,9 @@
         });
       });
 
-      function transCoordCB(status, result) {
+      function transCoordCB(status, result , callback) {
           if (status === daum.maps.services.Status.OK) {
-            console.log(result.y, result.x);
-            resultContent.push(result.y, result.x);
+            callback (result);
           }
           if(resultContent.length == 6){
             var BOM = "\uFEFF";
