--- a/txtToCsv.html
+++ b/txtToCsv.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <title>수요조사 결과</title>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="/FileSaver.min.js"></script>
+    <script src="/joohyuck.github.io/FileSaver.min.js"></script>
     <script type="text/javascript">
 
-      $.get("/file/(서울)정류장_목록.txt",function(data){
-        console.log(data);
+      $.get("/joohyuck.github.io/file/seoul_route_station.txt",function(data){
         var lines = data.split("\n");
         $("progress").attr("max", lines.length);
         console.log("노선 경유 정류장 개수 : " + lines.length);
@@ -17,8 +16,7 @@
         var resultContent ="";
         lines.forEach(function(element, index){
           $("progress").attr("value", index);
-          var str = element.replace(/,/g,"");
-          var str = str.split("|");
+          var str = element.split(",");
           str[0] += "번";
           resultContent += str+"\n";
         });
@@ -26,7 +24,7 @@
         var BOM = "\uFEFF";
         var    csvData = BOM + resultContent;
         var blob = new Blob([csvData], { type: "text/csv;charset=utf-8" });
-        saveAs(blob, "(서울)노선별_정류장.csv");
+        saveAs(blob, "seoul_route_station.csv");
       });
 
     </script>
