--- a/getSurveyData.html
+++ b/getSurveyData.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>수요조사 결과</title>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="/joohyuck.github.io/FileSaver.min.js"></script>
+    <script src="./FileSaver.min.js"></script>
     <script type="text/javascript">
 
-      $.get("/joohyuck.github.io/file/survey_result.json",function(data){
+      $.get("./file/survey_result.json",function(data){
         console.log(typeof(data));
         console.log(data);
 
