--- a/checkRoute.html
+++ b/checkRoute.html
@@ -6,12 +6,133 @@
     <link rel="stylesheet" href="./vendor/semantic-ui/semantic.min.css">
     <title>응삼을 위한 노선확인 페이지</title>
     <style>
-      section {
-        margin-top: 50px;
-      }
+
+@font-face {
+    font-family: 'Hansans-thin';
+    src: url(./font/NotoKR-Thin/notokr-thin.woff);
+}
+@font-face {
+    font-family: 'Hansans-bold';
+    src: url(./font/NotoKR-Bold/notokr-bold.woff);
+}
+@font-face {
+    font-family: 'Hansans-regular';
+    src: url(./font/NotoKR-Regular/notokr-regular.woff);
+}
+
+section {
+  margin-top: 50px;
+}
+#route-image .base-line {
+  position: relative;
+  width : 100%;
+  margin-left: 10%;
+  padding: 0px;
+  border-top-width: 7px;
+  border-top-style: solid;
+  border-top-color: #cccccc;
+}
+#route-image .base-line .hide-border{
+  position: absolute;
+  right: 0px;
+  width: 30%;
+  top: -8px; 
+  border-top-color: white;
+  border-top-width: 10px;
+  border-top-style: solid;
+}
+#route-image .route {
+  margin-top: 200px;
+  overflow: visible;
+}    
+#route-image .route li {
+  list-style: none;
+  position: absolute;
+  height: 20px;
+  overflow: visible;
+}
+#route-image .route li .time{
+  position: relative;
+  left : 28px;
+  top : 13px;
+  font-size: 1.06em;
+  /*
+  bottom : 40px;
+  */
+  color : #bcbcbc;
+}
+#route-image .route li .circle{
+  position: relative;
+  bottom : 13px;
+  /*
+  right: 27px;
+  */
+  display: inline-block;
+  width : 20px;
+  height : 20px;
+  border-style: solid;
+  border-color: lightgrey;
+  border-width: 7px;
+  border-radius: 50%;
+  background-color: white;
+}
+#route-image .route li .circle.end{
+  border-color: #00bbb3;
+}
+#route-image .route li .name{
+  font-family: 'Hansans-thin';
+  display: inline-block;
+  position: relative;
+  bottom : 85px;
+  right : 25px;
+  width : 150px;
+  height : 20px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1.31em;
+  color : #555555;
+  -ms-transform: rotate(-40deg);
+  -webkit-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+#route-image .route li .name.end{
+  font-family: 'Hansans-bold';
+  color: #00bbb3;
+}
+
+@media (max-width: 1100px) {
+    #route-image .base-line {
+      border-top-width: 4px;
+    }
+    #route-image .route li .time{
+      font-size: 0.9em;
+    }
+    #route-image .route li .circle{
+      top : -15px;
+      width : 15px;
+      height : 15px;
+      border-width: 4px;
+    }
+    #route-image .route li .name{
+      width : 150px;
+      height : 1.5em;
+      font-size: 1em;
+    }
+}
+@media (max-width: 768px) {
+
+
+}
+
     </style>
   </head>
   <body>
+
+<section id="route-image">
+</section>
+
     <section id="routes" class="ui container"></section>
     <script src="http://joohyuck.github.io/parse-1.4.2.min.js"></script> 
     <script type="text/javascript">
@@ -21,6 +142,55 @@
 
       query.find({
         success: function(placesObjects) {
+          var lng = "";
+          placesObjects.forEach(function(element){
+            lng += '<ul class="route base-line">';
+            lng += '<div class="hide-border"></div>';
+            element.attributes.stations.forEach(function(el,i){
+              lng += '<li>';
+              lng += '<span class="time">'+el.time+'</span>';
+              if(el.type == "S") {
+                lng += '<span class="circle start"></span>';
+                lng += '<span class="name start">'+i+'.'+el.stationName+'</span>';
+              }
+              else {
+                lng += '<span class="circle end"></span>';
+                lng += '<span class="name end">'+i+'.'+el.stationName+'</span>';
+              }
+              lng += '</li>'; 
+            });
+            lng +='  </ul>';
+          });
+          $("#route-image").html(lng);
+
+
+          placesObjects.forEach(function(element, index){
+            var num = element.attributes.stations.length;
+            var interval = $("#route-image").width()*0.7/num;
+
+            console.log(interval);
+            element.attributes.stations.forEach(function(el ,i){
+              if(el.type == "S")
+              $("#route-image .route:nth-child("+(index+1)+") li:nth-child("+(i+2)+")").css("left" , -45+interval*i);
+              else
+              $("#route-image .route:nth-child("+(index+1)+") li:nth-child("+(i+2)+")").css("left" , -45+interval*(i+1));  
+            });
+          });
+        $( window ).resize(function() {
+          placesObjects.forEach(function(element, index){
+            var num = element.attributes.stations.length;
+            var interval = $("#route-image").width()*0.7/num;
+            $("#route-image .base-line .hide-border").css("width", $("#route-image").width()*0.3);
+            console.log(interval);
+            element.attributes.stations.forEach(function(el ,i){
+              if(el.type == "S")
+              $("#route-image .route:nth-child("+(index+1)+") li:nth-child("+(i+2)+")").css("left" , -45+interval*i);
+              else
+              $("#route-image .route:nth-child("+(index+1)+") li:nth-child("+(i+2)+")").css("left" , -45+interval*(i+1));  
+            });
+          });
+        });
+
           var str = "";
           placesObjects.forEach(function(element){
             str +='<h4 class="ui horizontal divider header">';
@@ -53,6 +223,8 @@
         }
       });
     </script>
+    <script src="//use.typekit.net/zgw4neu.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script src="./vendor/semantic-ui/semantic.min.js"></script>
